# OpenLoki

./: README.md  config.toml  pyproject.toml  requirements.txt  user_auth.toml
agno_backend/: app.py
dash_frontend/: app.py  configure.py  server.py
dash_frontend/assets/css/: base.css
dash_frontend/assets/js/: app_callbacks.js  myjs.js  tool_callbacks.js
dash_frontend/blueprint/: conversion_api.py
dash_frontend/callbacks/: app_c.py  aside_c.py  conversation_c.py  tool_c.py
dash_frontend/components/: conversation_area.py  conversation_header.py  conversation_input.py
dash_frontend/components/message_box/: assistant_output_box.py  assistant_thinking_box.py  assistant_tool_call_box.py  tool_result_serper_search_box.py  user_box.py
dash_frontend/utils/: browser.py  dash_util.py
dash_frontend/views/: aside.py  conversation_interface.py
fastapi_backend/: app.py
fastapi_backend/api/: deps.py
fastapi_backend/api/v1/: api.py
fastapi_backend/api/v1/endpoints/: llm_endpoint.py
fastapi_backend/core/: configure.py  middleware.py
fastapi_backend/core/llm/: general_agent.py  prompt.py
fastapi_backend/core/llm/subagent/: agent_summarize.py
fastapi_backend/models/domains/: llm_domain.py
fastapi_backend/models/schemas/: llm_schema.py
fastapi_backend/services/: llm_service.py
fastapi_backend/utils/: llm_util.py  log_util.py
fastapi_backend/utils/mcp_util/: __init__.py  mcp_datetime_util.py  mcp_search_serper_util.py
script/: start_agno_backend.bat  start_dash_frontend.bat  start_fastapi_backend.bat
